[FIX] simple fix and lilte change in gaps

--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,16 +1,19 @@
 .mainFooterContainer {
+  position: relative;
   background-color: #ff8989;
   width: 100%;
-  height: 150px;
+  height: 280px;
   display: flex;
   justify-content: space-between;
 }
 
 .socialsContainer {
+  margin-left: 10px;
   height: 100%;
   width: fit-content;
   display: flex;
   justify-content: space-evenly;
+  gap: 10px
 }
 
 .indivSocial {
@@ -34,7 +37,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 10px
+  gap: 50px
 }
 
 .quickContactsContainer p {
